--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.14.1",
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
+    "handlebars": "^4.7.8",
     "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
@@ -43,6 +44,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.14",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
